// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinningIcon renders correctly 1`] = `
<div>
  <div
    class="SpinningIcon-fast"
  />
</div>
`;

exports[`SpinningIcon renders correctly with icon as child 1`] = `
<div>
  <div
    class="SpinningIcon-fast"
  >
    ⚡
  </div>
</div>
`;

exports[`SpinningIcon renders correctly with icon as child and speed 1`] = `
<div>
  <div
    class="SpinningIcon-slow"
    speed="slow"
  >
    ⚡
  </div>
</div>
`;
